# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2

  07 Sep 2005; Roy Marples <uberlord@gentoo.org>:
 
    replace the apipa module with a generic arping module which can now
    do gateway detection and apply a configuration for it as well as the
    apipa stuff

    updated env_whitelist so that nothing is allowed by default

    system module now runs through pre instead of post and is run by
    lo as well, so dns_ options can be configured for it

    netplug and wpa_supplicant understand negative timeouts to be defined
    as "return immediately and don't wait for success"

    dns options and sortlist now get merged in resolv.conf too

    bridge error message regarding the kernel module should work with
    newer versions of bridge-utils

  06 Sep 2005; Roy Marples <uberlord@gentoo.org>:

    dns_*, nis_* and ntp_* options now work globally too, but are overridden
    by specific interface/essid/mac ones.

    dhcpcd and pump now support the "options" and "sortlist" directives too,
    #104870

  05 Sep 2005; Roy Marples <uberlord@gentoo.org>:

    Added resolv.conf options for "options" and "sortlist" directives, #104870

    dns_search_path_eth0 renamed to dns_search_eth0 so that all the dns_
    variables match their resolv.conf counterpart.

  04 Sep 2005; Martin Schlemmer <azarah@gentoo.org>:

    Do not unmount /usr, but rather remount it ro, else we run into issues
    with systems that have locales enabled, as the fuser call in halt.sh tries
    to kill bash (due to it using /usr/lib/locale/*).

  03 Sep 2005; Martin Schlemmer <azarah@gentoo.org>:

    Add warning about having LANG in env_whitelist, add TERM to system
    env_whitelist, set argv[0] to '/bin/bash' and not 'runscript'.

  02 Sep 2005; Roy Marples <uberlord@gentoo.org>:

    Fixed netplug from stopping on the wrong interface

* baselayout-1.12.0_pre8 (02 Sep 2005)
